--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     container_name: postgres
     image: postgres
     environment:
-      POSTGRES_NAME: phucnst
+      POSTGRES_NAME: postgres
       POSTGRES_PASSWORD: password
       PGDATA: /data/postgres
     volumes:
