--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
   <url>http://www.CMP.com.vn</url>
   <modules>
     <module>customer</module>
+      <module>fraud</module>
   </modules>
 
   <properties>
