03/04/2024 - Done Fraud Module, Add Readme and update customer module

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,46 +29,46 @@ services:
       - postgres
     restart: unless-stopped
 
-  zipkin:
-    image: openzipkin/zipkin
-    container_name: zipkin
-    ports:
-      - "9411:9411"
-    networks:
-      - spring
-    rabbitmq:
-      image: rabbitmq:3.9.11-management-alpine
-      container_name: rabbitmq
-      ports:
-        - "5672:5672"
-        - "15672:15672"
-      networks:
-        - spring
-
-  eureka-server:
-    image: amigoscode/eureka-server:latest
-    container_name: eureka-server
-    ports:
-      - "8761:8761"
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    networks:
-      - spring
-    depends_on:
-      - zipkin
-
-  apigw:
-    image: amigoscode/apigw:latest
-    container_name: apigw
-    ports:
-      - "8084:8084"
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    networks:
-      - spring
-    depends_on:
-      - zipkin
-      - eureka-server
+#  zipkin:
+#    image: openzipkin/zipkin
+#    container_name: zipkin
+#    ports:
+#      - "9411:9411"
+#    networks:
+#      - spring
+#    rabbitmq:
+#      image: rabbitmq:3.9.11-management-alpine
+#      container_name: rabbitmq
+#      ports:
+#        - "5672:5672"
+#        - "15672:15672"
+#      networks:
+#        - spring
+#
+#  eureka-server:
+#    image: amigoscode/eureka-server:latest
+#    container_name: eureka-server
+#    ports:
+#      - "8761:8761"
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#    networks:
+#      - spring
+#    depends_on:
+#      - zipkin
+#
+#  apigw:
+#    image: amigoscode/apigw:latest
+#    container_name: apigw
+#    ports:
+#      - "8084:8084"
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#    networks:
+#      - spring
+#    depends_on:
+#      - zipkin
+#      - eureka-server
 
   customer:
     image: amigoscode/customer:latest
@@ -81,9 +81,7 @@ services:
       - spring
       - postgres
     depends_on:
-      - zipkin
       - postgres
-      - rabbitmq
 
   fraud:
     image: amigoscode/fraud:latest
@@ -96,24 +94,22 @@ services:
       - spring
       - postgres
     depends_on:
-      - zipkin
       - postgres
-      - rabbitmq
 
-  notification:
-    image: amigoscode/notification:latest
-    container_name: notification
-    ports:
-      - "8082:8082"
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    networks:
-      - spring
-      - postgres
-    depends_on:
-      - zipkin
-      - postgres
-      - rabbitmq
+#  notification:
+#    image: amigoscode/notification:latest
+#    container_name: notification
+#    ports:
+#      - "8082:8082"
+#    environment:
+#      - SPRING_PROFILES_ACTIVE=docker
+#    networks:
+#      - spring
+#      - postgres
+#    depends_on:
+#      - zipkin
+#      - postgres
+#      - rabbitmq
 
 networks:
   postgres:
