--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.phucnst.microservices</groupId>
+  <groupId>com.phucnst</groupId>
   <artifactId>Cinemas-Management</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
@@ -14,6 +14,7 @@
   <modules>
     <module>customer</module>
       <module>fraud</module>
+    <module>eureka-server</module>
   </modules>
 
   <properties>
