05/04/2024 - Setup EurekaSever and Learn about LoadBalanced
Another day of learning microservices, LoadBlanced using round rubbing quite cool to learn

--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -6,6 +6,13 @@ server:
   port: 8761
 
 eureka:
+  server:
+    wait-time-in-ms-when-sync-empty: 0
+  dashboard:
+    path: /dashboard
+  instance:
+    hostname: localhost
   client:
     fetch-registry: false
     register-with-eureka: false
+
