--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,22 +29,23 @@ services:
       - postgres
     restart: unless-stopped
 
-#  zipkin:
-#    image: openzipkin/zipkin
-#    container_name: zipkin
-#    ports:
-#      - "9411:9411"
-#    networks:
-#      - spring
-#    rabbitmq:
-#      image: rabbitmq:3.9.11-management-alpine
-#      container_name: rabbitmq
-#      ports:
-#        - "5672:5672"
-#        - "15672:15672"
-#      networks:
-#        - spring
-#
+  zipkin:
+    image: openzipkin/zipkin
+    container_name: zipkin
+    ports:
+      - "9411:9411"
+    networks:
+      - spring
+
+  rabbitmq:
+    image: rabbitmq:3.9.11-management-alpine
+    container_name: rabbitmq
+    ports:
+       - "5672:5672"
+       - "15672:15672"
+    networks:
+      - spring
+
 #  eureka-server:
 #    image: amigoscode/eureka-server:latest
 #    container_name: eureka-server
